# metalwalrus

./: .gitattributes  README.md
metalwalrus/: .gitignore  CMakeLists.txt  Resource.rc  main.cpp  makefile  metalwalrus.sln  metalwalrus.vcxproj  metalwalrus.vcxproj.filters  resource.h
metalwalrus/Src/: main.cpp
metalwalrus/Src/Framework/: Game.cpp  Game.h  Settings.cpp  Settings.h
metalwalrus/Src/Framework/Animation/: AnimatedSprite.cpp  AnimatedSprite.h  FrameAnimation.h
metalwalrus/Src/Framework/Audio/: Audio.cpp  Audio.h  AudioLocator.cpp  AudioLocator.h  NullAudio.h  PCAudio.cpp  PCAudio.h
metalwalrus/Src/Framework/Data/: PropertyContainer.h
metalwalrus/Src/Framework/Game/: GameObject.cpp  GameObject.h  SolidObject.cpp  SolidObject.h
metalwalrus/Src/Framework/Graphics/: Camera.cpp  Camera.h  Color.cpp  Color.h  FontSheet.cpp  FontSheet.h  FrameBuffer.cpp  FrameBuffer.h  GLContext.cpp  GLContext.h  SpriteBatch.cpp  SpriteBatch.h  SpriteSheet.cpp  SpriteSheet.h  Texture2D.cpp  Texture2D.h  TextureRegion.cpp  TextureRegion.h  TileMap.cpp  TileMap.h  Vertex.h  VertexAttributes.cpp  VertexAttributes.h  VertexBuffer.cpp  VertexBuffer.h  VertexData.cpp  VertexData.h
metalwalrus/Src/Framework/Input/: InputHandler.cpp  InputHandler.h
metalwalrus/Src/Framework/Math/: Matrix3.cpp  Matrix3.h  Matrix4.h  (+3 more)
metalwalrus/Src/game/: MetalWalrus.cpp  MetalWalrus.h
metalwalrus/lib/: .gitignore  contents.txt
metalwalrus/nbproject/: configurations.xml  project.properties  project.xml
metalwalrus/nbproject/private/: Default.properties  configurations.xml  private.xml
(+95 files in other folders)
